# design-perspective-discord

./: README.md  main.py  pyproject.toml
translations/: en.yml  ja.yml
